# App42-IoT-Rust

./: .gitmodules  Cargo.toml  LICENSE
app42-iot/: Cargo.toml
app42-iot-sys/: Cargo.toml  build.rs
app42-iot-sys/src/: lib.rs
