[package]
name = "app42-iot-sys"
version = "0.1.0"
edition = "2021"

description = "Rust FFI wrappers for the App42 IoT SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
autocxx = "0.26.0"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
